<resources>
    <string name="app_name">printio</string>
    <string name="share_app_text">I\'m using PrintIO! You can download it from http://www.print.io/our-app</string>
    <string name="upgrade_to">PrintIO has been upgraded to %1$s, we recommend you to update now?</string>
    <string name="upgrade_to_force_upgrade">PrintIO has been upgraded to %1$s, it is a critical update and you must update in order to continue!</string>
    <string name="menu_settings">Settings</string>
    <string name="choose_country">Choose Country</string>
    <string name="store">Store</string>
    <string name="my_albums">My Albums</string>
    <string name="view_chart">View Chart</string>
    <string name="new_photos">New Photos</string>
    <string name="log_in_to_facebook">Log In To Facebook</string>
    <string name="facebook_login_failed">Error while logging in to Facebook</string>
    <string name="log_in_to_instagram">Log In To Instagram</string>
    <string name="log_in_to_pinterest">Log In To Pinterest</string>
    <string name="log_in_to">Log In To %1$s</string>
    <string name="photobucket_login">Photobucket Login</string>
    <string name="photobucket_server_error">Photobucket is temporarily unavailable. Please try later.</string>
    <string name="photobucket_error_loading_albums">Error loading Photobucket albums. Please try later.</string>
    <string name="photobucket_error_loading_photos">Error loading Photobucket photos. Please try later.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="successful_login_to_photo_source">Successfully logged in to %1$s</string>
    <string name="failed_to_login_to_photo_source">Failed to log in to %1$s</string>
    <string name="enter_username_and_password">Please enter your username and password</string>
    <string name="wrong_username_or_password">You have entered a wrong username or password</string>
    <string name="other">Other</string>
    <string name="my_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="shipping_to">Will you be shipping to %1$s?</string>
    <string name="shipping_to_drop_down">SHIPPING TO: </string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="exit">Exit</string>
    <string name="starting_at_">Starting at %s</string>
    <string name="price_">Price %s</string>
    <string name="price_each">%s Each</string>
    <string name="title_featured_products">Products</string>
    <string name="view_all_products">View All Products</string>
    <string name="all_products">All Products</string>
    <string name="all">All</string>
    <string name="product_details">Product Details</string>
    <string name="choose">Choose</string>
    <string name="you_get">You get 1 tinybook with 10 images</string>
    <string name="text_star_1">Each book has 24 photos and you get 3 books with each order.</string>
    <string name="text_star_2">If you choose Instagram photos, you\'ll get 3 of the Same book, choose 72 images for 3 Unique books.</string>
    <string name="text_star_3">Tinybooks measure only 1.7 inches x 1.5 inches (37mm x 44mm).</string>
    <string name="image_upload">Image Upload</string>
    <string name="phone">Phone</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_photos_of_me">Photos of Me</string>
    <string name="facebook_photos_of_friends">Photos of Friends</string>
    <string name="flickr">Flickr</string>
    <string name="picasa">Picasa</string>
    <string name="dropbox">Dropbox</string>
    <string name="photobucket">Photobucket</string>
    <string name="preselected">Preselected</string>
    <string name="customize_product">Customize Product</string>
    <string name="customize_product_tooltip_text">Double-tap photo to edit</string>
    <string name="product_price">Product Price</string>
    <string name="select_your_options">Select Your Options</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="crop_image">Crop Image</string>
    <string name="pinch_to_zoom">Pinch To Zoom</string>
    <string name="product_preview">Product Preview</string>
    <string name="choose_print_type">Choose print type</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="add_more_products">Add More Products</string>
    <string name="total_price">Total Price</string>
    <string name="order_summary">Order Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="promo_code">Promo Code</string>
    <string name="tax">Tax</string>
    <string name="free">Free</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="star">&#9733;</string>
    <string name="shopping_methods">Shipping Methods and Calculation</string>
    <string name="fill_address">Please fill in your Shipping Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="telephone_number">Phone Number</string>
    <string name="checkout">Check Out</string>
    <string name="billing_country">Billing Country</string>
    <string name="united_states">United States</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="card_information">Card Information</string>
    <string name="card_number">Card Number</string>
    <string name="cvc">CVC or CVS</string>
    <string name="enter_cvc">Enter CVC or CVS please!</string>
    <string name="expiration_month">Expiration Month</string>
    <string name="exp_month_not_valid">Expiration month is not valid!</string>
    <string name="expiration_year">Expiration Year</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="billing_address">Billing Address</string>
    <string name="is_business_address">Is business address?</string>
    <string name="same_as">Same as Shipping Address</string>
    <string name="invalid_coupon">Coupon code is not valid!</string>
    <string name="enter_promo_code">Please enter promo code.</string>
    <string name="coupon_not_applied">Sorry, this coupon does not apply to the items in your cart.</string>
    <string name="coupon_applied">Coupon applied. You saved %1$s</string>
    <string name="coupon_savings_short">Savings:</string>
    <string name="coupon_savings_long">Coupon Savings:</string>
    <string name="ship_discount">Ship Discount</string>
    <string name="place_order">Place Order</string>
    <string name="enter_payment_info">Enter Payment Info</string>
    <string name="address">Address</string>
    <string name="select_photos_from">Tap icons to get images</string>
    <string name="multiphoto_upload"><b>Multi Photo Upload</b>\nYou have chosen a multi photo design. Please click your desired image source above. As you add images from your sources above the number of photos below will be counted. When you are ready to make the product please click the customize product button.</string>
    <string name="singlephoto_upload"><b>Single Photo Upload</b>\nYou have chosen an item that only needs one image to complete the design. Please select an image source above, log-in if necessary to your desired photo source, and then push the customize product button </string>
    <string name="quantity">Quantity</string>
    <string name="preview">Preview</string>
    <string name="edit">Edit</string>
    <string name="paypal">Paypal</string>
    <string name="company">Company</string>
    <string name="edit_tools">Edit Tools</string>
    <string name="case_type">Case Type</string>
    <string name="layout">Layout</string>
    <string name="back">Back</string>
    <string name="front_side">Front Side</string>
    <string name="back_side">Back Side</string>
    <string name="side_number">Side %1$s</string>
    <string name="page_number">Page %1$s</string>
    <string name="page_n_of_m">Page %1$s / %2$s</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="prev">Prev</string>
    <string name="autofill">Do you need to make a random or manual autofill!</string>
    <string name="random">Random Auto Arrange</string>
    <string name="manual">Manual Drag and Drop</string>
    <string name="fill_in">Please fill in your Shipping Address</string>
    <string name="fedex">FedEX</string>
    <string name="find_shipping_address">Find Shipping Address</string>
    <string name="order">Order</string>
    <string name="need_to_share">Share this deal with your Facebook Friends to get this great $1 deal!</string>
    <string name="fb_canvas_share_text">I just purchased canvas wraps for $1 at print.io! Check them out, it\'s ending soon!</string>
    <string name="empty_first_name">\'First name\' should not be empty</string>
    <string name="empty_last_name">\'Last name\' should not be empty</string>
    <string name="empty_email">\'Email\' should not be empty</string>
    <string name="empty_state">\'State\' should not be empty</string>
    <string name="empty_zip_code">\'Zip code\' should not be empty</string>
    <string name="empty_city">\'City\' should not be empty</string>
    <string name="empty_address1">\'Address 1\' should not be empty</string>
    <string name="empty_area_num">\'Area num\' should not be empty</string>
    <string name="empty_telephone_num">\'Telephone num\' should not be less then 10 digits</string>
    <string name="empty_name">\'Name\' should not be empty</string>
    <string name="empty_street">\'Street\' should not be empty</string>
    <string name="error_some_items_were_removed_from_shopping_cart">Some items were removed from your shopping cart.</string>
    <string name="error_getting_shopping_cart_items_prices">Error receiving shopping cart prices. Please try again later.</string>
    <string name="error_getting_country_list">Cannot download countries list</string>
    <string name="error_uploading_product">Error uploading product photos. Please try again.</string>
    <string name="error_ordering_product">Error while ordering.\nPlease go back to previous screen and ensure that you have entered all necessary data.</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="login">Login</string>
    <string name="internet_connection_error">Error, please check your internet connection!</string>
    <string name="shipping_info">Shipping Info</string>
    <string name="shipping_info_arrival">Est. Arrival</string>
    <string name="shipping_info_arrival_text">Days</string>
    <string name="shipping_info_price">Est. Ship</string>
    <string name="shipping_info_price_text">Estimate Price</string>
    <string name="shipping_info_information">Shipping Information</string>
    <string name="shipping_info_information_text">This item is in stock and ships within three business days.</string>
    <string name="shipping_info_return_policy">Return Policy</string>
    <string name="shipping_info_return_policy_text">This item is satisfaction guaranteed and we will exchange it until you are happy.</string>
    <string name="shipping_info_availability">Availability</string>
    <string name="shipping_info_availability_text">This item ships internationally.</string>
    <string name="selected_images">You selected only %1$s/%2$s images</string>
    <string name="or">or</string>
    <string name="add_more_images">Add More Images</string>
    <string name="duplicate_to_fill_space">Duplicate to Fill Order</string>
    <string name="share">Share</string>
    <string name="cancel_deal">Cancel Deal</string>
</resources>