<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white"
    android:minWidth="300dip"
    android:orientation="vertical"
    android:padding="8dip" >

    <print.io.view.TextViewFontNormal
        android:id="@+id/textview_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="2dip"
        android:paddingBottom="8dip"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_large" />

    <print.io.view.EditTextFontLight
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:nextFocusForward="@+id/edittext_password"
        android:padding="12dip" />

    <print.io.view.EditTextFontLight
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:nextFocusForward="@+id/button_login"
        android:padding="12dip" />

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:orientation="horizontal" >

        <print.io.view.ButtonFontLight
            android:id="@+id/button_cancel"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="4dip"
            android:layout_weight="1"
            android:background="@drawable/btn_secondary"
            android:gravity="center"
            android:lineSpacingExtra="1dp"
            android:padding="8dip"
            android:text="@string/cancel"
            android:textColor="@color/button_secondary_text"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />

        <print.io.view.ButtonFontLight
            android:id="@+id/button_login"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dip"
            android:layout_weight="1"
            android:background="@drawable/btn_primary"
            android:gravity="center"
            android:lineSpacingExtra="1dp"
            android:padding="8dip"
            android:text="@string/login"
            android:textColor="@color/button_primary_text"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>