<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:padding="8dip" >

       <print.io.view.TextViewFontLight
            android:id="@+id/textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/selected_images"
            android:textColor="#5a5d66"
            android:textSize="@dimen/text_size_large" />

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_title"
            android:layout_marginTop="15dip"
            android:orientation="horizontal" >

            <print.io.view.TextViewFontLight
                android:id="@+id/textview_add_more_images"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:drawablePadding="10dip"
                android:drawableTop="@drawable/button_add_more_images"
                android:gravity="center"
                android:text="@string/add_more_images"
                android:textColor="#5a5d66"
                android:textSize="@dimen/text_size_normal" />

            <print.io.view.TextViewFontLight
                android:id="@+id/textview_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="32dip"
                android:text="@string/or"
                android:textColor="#5a5d66"
                android:textSize="@dimen/text_size_normal" />

            <print.io.view.TextViewFontLight
                android:id="@+id/textview_duplicate"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:drawablePadding="10dip"
                android:drawableTop="@drawable/icon_duplicate"
                android:gravity="center"
                android:text="@string/duplicate_to_fill_space"
                android:textColor="#5a5d66"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>