<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_transparent"
    android:clickable="true"
    android:visibility="visible" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="14dip"
        android:background="@drawable/bg_white"
        android:padding="8dip" >

        <print.io.view.TextViewFontLight
            android:id="@+id/textview_are_you_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingBottom="16dip"
            android:paddingTop="8dip"
            android:text="@string/need_to_share"
            android:textColor="#5a5d66"
            android:textSize="@dimen/text_size_normal" />

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_are_you_sure"
            android:orientation="horizontal" >

            <print.io.view.ButtonFontLight
                android:id="@+id/button_no"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginRight="4dip"
                android:layout_weight="1"
                android:background="@drawable/btn_blue_light"
                android:gravity="center"
                android:onClick="onClickNo"
                android:padding="8dip"
                android:text="@string/cancel_deal"
                android:textColor="@color/primary_button_text"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <print.io.view.ButtonFontLight
                android:id="@+id/button_yes"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dip"
                android:layout_weight="1"
                android:background="@drawable/btn_green"
                android:gravity="center"
                android:onClick="onClickYes"
                android:padding="8dip"
                android:text="@string/share"
                android:textColor="@color/secondary_button_text"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>